--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.3.0-alpha2",
     "jquery": "^3.6.4",
     "leaflet": "^1.9.3",
+    "libphonenumber-js": "^1.10.30",
     "materialize-css": "^1.0.0-rc.2",
     "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
