--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@asymmetrik/ngx-leaflet": "^15.0.1",
+    "@popperjs/core": "^2.11.7",
     "@sweetalert2/ngx-sweetalert2": "^12.1.0",
     "@types/leaflet": "^1.9.3",
+    "accessibility": "^4.5.7",
     "bootstrap": "^5.3.0-alpha2",
-    "jquery": "^3.6.4",
     "leaflet": "^1.9.3",
     "materialize-css": "^1.0.0-rc.2",
     "primeicons": "^6.0.1",
