--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@asymmetrik/ngx-leaflet": "^15.0.1",
+    "@popperjs/core": "^2.11.7",
     "@sweetalert2/ngx-sweetalert2": "^12.1.0",
     "@types/leaflet": "^1.9.3",
     "bootstrap": "^5.3.0-alpha2",
