--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.11.7",
     "@sweetalert2/ngx-sweetalert2": "^12.1.0",
     "@types/leaflet": "^1.9.3",
+    "accessibility": "^4.5.7",
     "bootstrap": "^5.3.0-alpha2",
     "jquery": "^3.6.4",
     "leaflet": "^1.9.3",
