--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@angular/service-worker": "^15.2.0",
     "@asymmetrik/ngx-leaflet": "^15.0.1",
     "@popperjs/core": "^2.11.7",
     "@sweetalert2/ngx-sweetalert2": "^12.1.0",
@@ -32,7 +33,7 @@
     "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.7.5",
+    "sweetalert2": "^11.4.8",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
