--- a/package.json
+++ b/package.json
@@ -23,16 +23,18 @@
     "@popperjs/core": "^2.11.7",
     "@sweetalert2/ngx-sweetalert2": "^12.1.0",
     "@types/leaflet": "^1.9.3",
+    "@types/numeral": "^2.0.2",
     "accessibility": "^4.5.7",
     "bootstrap": "^5.3.0-alpha2",
     "jquery": "^3.6.4",
     "leaflet": "^1.9.3",
     "libphonenumber-js": "^1.10.30",
     "materialize-css": "^1.0.0-rc.2",
+    "numeral": "^2.0.6",
     "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.7.5",
+    "sweetalert2": "^11.4.8",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
