--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
+    "@angular/pwa": "^15.2.1",
     "@angular/router": "^15.2.0",
+    "@angular/service-worker": "^15.2.9",
     "@asymmetrik/ngx-leaflet": "^15.0.1",
     "@popperjs/core": "^2.11.7",
     "@sweetalert2/ngx-sweetalert2": "^12.1.0",
@@ -43,7 +45,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
-    "angular-cli-ghpages": "^1.0.5",
+    "angular-cli-ghpages": "^1.0.6",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
