--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/leaflet": "^1.9.3",
     "@types/numeral": "^2.0.2",
     "accessibility": "^4.5.7",
+    "angularx-qrcode": "^15.0.1",
     "bootstrap": "^5.3.0-alpha2",
     "jquery": "^3.6.4",
     "leaflet": "^1.9.3",
