--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@asymmetrik/ngx-leaflet": "^15.0.1",
     "@popperjs/core": "^2.11.7",
     "@sweetalert2/ngx-sweetalert2": "^12.1.0",
+    "@types/chart.js": "^2.8.0",
     "@types/leaflet": "^1.9.3",
     "@types/numeral": "^2.0.2",
     "accessibility": "^4.5.7",
     "angularx-qrcode": "^15.0.1",
     "bootstrap": "^5.3.0-alpha2",
+    "chart.js": "^2.8.0",
     "jquery": "^3.6.4",
     "leaflet": "^1.9.3",
     "libphonenumber-js": "^1.10.30",
