--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "angularx-qrcode": "^15.0.1",
     "bootstrap": "^5.3.0-alpha2",
     "chart.js": "^2.8.0",
+    "ics": "^3.2.0",
     "jquery": "^3.6.4",
     "leaflet": "^1.9.3",
     "libphonenumber-js": "^1.10.30",
